--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -446,10 +446,8 @@
 			grid-template-columns: repeat(1, 150px)
 			justify-content: center
 		.info-links-news
-			flex-direction: column
-			a
-				margin-right: 0
-				margin-bottom: 30px
+			grid-template-columns: auto
+			justify-content: center
 
 	.single-content
 		padding: 0
