--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -847,6 +847,9 @@
 					display: flex
 					justify-content: center
 					align-items: center
+			.footer-text
+				margin-bottom: 10px
+				max-width: auto
 			.contacts
 				display: flex
 				flex-direction: column
