--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -718,7 +718,7 @@ h2.type-head
 	.footer-grid
 		display: flex
 		justify-content: space-between
-		height: 50px
+		height: 70px
 		.footer-logo
 			display: flex
 			align-items: center
@@ -739,6 +739,15 @@ h2.type-head
 				opacity: .37
 				&:hover
 					text-decoration: none
+		.footer-text
+			display: flex
+			align-items: center
+			max-width: 515px
+			p
+				font-size: 12px
+				color: #ababab
+				margin: 0
+				line-height: 1.1
 		.contacts
 			display: flex
 			align-items: center
