add new photo index page

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -320,6 +320,11 @@
 	.info-content
 		.map
 			margin: 40px 0 40px 0
+			.images
+				grid-template-columns: auto
+				grid-gap: 25px
+				.img-office
+					min-height: 650px
 		.info-links-news
 			justify-content: space-between
 			a
@@ -442,6 +447,11 @@
 					margin-left: 25px
 
 	.info-content
+		.map
+			.images
+				grid-gap: 25px
+				.img-office
+					min-height: 450px
 		.info-links
 			grid-template-columns: repeat(1, 150px)
 			justify-content: center
