--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -313,6 +313,13 @@ h2.type-head
 					color: $accent
 	.map
 		margin: 125px 0 85px 0
+		.images
+			display: grid
+			grid-template-columns: auto auto
+			grid-gap: 25px
+			.img-office
+				min-height: 650px
+				background-size: cover!important
 	h4
 		font-size: 30px
 		font-weight: 700
